Fix for dot markers overlapping text – part of issue #178.

--- a/styles/pigments.less
+++ b/styles/pigments.less
@@ -166,7 +166,7 @@ pigments-color-marker {
     height: 1em;
     border-radius: 50%;
     vertical-align: bottom;
-    transform: translate(0, -50%);
+    transform: translate(50%, -50%);
 
     &:before {
       content: '';
